# Rust

all_in_one_tool/: Cargo.toml
all_in_one_tool/src/: indexer.rs  main.rs  models.rs
all_in_one_tool/src/ui/: main.slint
file-searcher/: Cargo.toml
file-searcher/src/: db.rs  indexer.rs  main.rs  models.rs
file-searcher/src/ui/: main.slint
local_ai/: .gitignore  Cargo.toml
local_ai/src/: finetune.rs  gui.rs  main.rs
twitch_bot/: .gitignore  Cargo.toml
twitch_bot/src/: main.rs
