[package]
name = "all_in_one_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
kamadak-exif = "0.5.5"
id3 = "1.0.0"
metaflac = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
humantime-serde = "1.1"
humantime = "2.1.0"
mp4ameta = "0.13.0"
slint = "1.5.1"
rfd = "0.14.1"
png = "0.17.16"
csv = "1.3.0"

[build-dependencies]
slint-build = "1.5.1"
