[package]
name = "file-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
walkdir = "2.3.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
kamadak-exif = "0.5.5"
id3 = "1.0.0"
metaflac = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
humantime-serde = "1.1"
mp4ameta = "0.13.0"
