[package]
name = "local_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI Library (kept for future use)
iced = "0.12.1"
rand = "0.8.5"

# Candle dependencies for ML
anyhow = "1.0.86"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"

# Hugging Face Hub for model loading
hf-hub = "0.4.3"
tokenizers = "0.19.1"
