[package]
name = "local_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
# Using the exact versions from the Candle workspace to ensure compatibility.
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.1"
tokenizers = "0.21.0"
rand = "0.9.0"
# The 'half' crate and its features are critical for resolving the 'rand' conflict.
half = { version = "2.5.0", features = ["rand_distr"] }

# Iced is optional for now
iced = { version = "0.12.1", optional = true }
