[package]
name = "local_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
# Using the exact versions from the Candle workspace to ensure compatibility.
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.1"
tokenizers = "0.21.0"
rand = "0.9.0"
half = { version = "2.5.0", features = ["rand_distr"] }
serde_json = "1.0.99"

[features]
# This feature enables ROCm support in the candle libraries for AMD GPUs.
rocm = ["candle-core/rocm", "candle-nn/rocm", "candle-transformers/rocm"]
